Fix strange scroll behavior on short overflows
Made the appframe hide its overflow to have no overflow on margins

--- a/src/f_spacial/src/containers/App/stylesheets/App.css
+++ b/src/f_spacial/src/containers/App/stylesheets/App.css
@@ -1,6 +1,7 @@
 .AppFrame {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 .NomNomSpace{
@@ -10,7 +11,7 @@
 
 .MaxHeight {
   height: 100%;
-  max-height: calc(100vh - 64px); /* Never gonna break, guaranteed! */ 
+  max-height: calc(100vh - 64px); /* Never gonna break, guaranteed! */
   flex: 1;
   overflow: auto;
 }
